<resources>
    <string name="app_name" translatable="false">Goalmetrix</string>
    <string name="exit_app_hint">Click to exit.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="finish">Finish</string>
    <string name="finished">Finished</string>
    <string name="start">Start</string>
    <string name="account_name">no account</string>

    <!--calendar-->
    <string name="calendar_today">Today</string>
    <string-array name="calendar_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="calendar_day">%d day</string>
    <string name="calendar_year">%d-</string>

    <!--schedule-->
    <string name="schedule_input_you_do_thing">Input what to do</string>
    <string name="schedule_input_content_is_no_null">Content can\'t be empty.</string>
    <string name="schedule_event_detail_setting">Detail setting</string>
    <string name="schedule_title">Schedule title</string>
    <string name="schedule_show_finish_task">Show completed</string>
    <string name="schedule_hide_finish_task">Hide completed</string>
    <string name="schedule_delete_this_schedule">Delete the schedule?</string>
    <string name="input_desc">Input description...</string>
    <!--menu-->
    <string name="menu_schedule">Scheduler</string>
    <string name="menu_goal_tracker">Goal Tracker</string>
    <string name="menu_money">Money Tracker</string>
    <string name="menu_add_event_set">Add event list</string>
    <string name="menu_no_category">Unclassified </string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="menu_settings">Settings</string>
    <!--zaloopa_datepicker-->
    <string name="clean">Clean</string>

    <!--event menu-->
    <string name="menu_delete_event">Delete</string>
    <string name="menu_duplicate_event">Duplicate</string>
    <string name="menu_update_goal">Change</string>
    <string name="menu_save_goal">Done</string>

    <!--event.set-->
    <string name="pref_changed_value_calendars">Calendar Changed</string>


    <string name="event_set_list_name">List name</string>
    <string name="event_set_color">Color</string>
    <string name="event_set_name_is_not_null">List name can\'t be empty.</string>
    <string name="event_set_select_color">Choose color</string>
    <string name="event_set_delete_this_event_set">Delete events?</string>

    <string name="hour">Hour</string>
    <string name="remarks">Reminders</string>
    <string name="please_input_desc">Input the reminders</string>
    <string name="date_format">yyyy-MM-dd HH:mm</string>
    <string name="time_format">HH:mm</string>
    <string name="date_format_no_time">%1$s-%2$s-%3$s</string>
    <string name="click_here_select_date">Click to choose time</string>
    <string name="click_here_select_location">Click to select location</string>
    <string name="click_input_location">Click to input location</string>
    <string name="add_location">Add spot</string>
    <string name="select_event_set">Choose events</string>











    <!--Auth-->
    <string name="try_with_out_auth">Try it anonymously</string>

    <!--firebase-->
    <string name="firebase_web_host" translatable="false">money-goal-calendar.firebaseapp.com</string>
    <string name="sign_in_cancelled" translatable="false">Log in Cancel</string>
    <string name="no_internet_connection" translatable="false">No Internet</string>
    <string name="unknown_error" translatable="false">Unknown error</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    
    
    
    <!-- Money -->
    <string name="money_daily">Daily</string>
    <string name="money_weekly">Weekly</string>
    <string name="money_monthly">Monthly</string>
    <string name="money_total">Total</string>
    <string name="money_transaction">Transactions</string>
    <string name="money_statistics">Statistics</string>
    <string name="money_accounts">Accounts</string>
    <string name="money_settings">Settings</string>
    
    
    
    
    


    <!--  Goal -->
    <string name="state_doing">Doing</string>
    <string name="state_done">Done</string>
    <!--  Goal dialog-->
    <string name="goal_dialog_archive">Archive</string>
    <string name="goal_dialog_delete">Delete</string>
    <string name="goal_dialog_edit">Edit</string>
    <string name="goal_dialog_members">Members</string>
    <string name="goal_dialog_settings">Settings</string>
    <string name="goal_dialog_share">Share</string>
    
    
    
    
    
    
    
    
    
    
    

    <!-- colors -->
    <string name="tomato">Tomato</string>
    <string name="tangerine">Tangerine</string>
    <string name="banana">Banana</string>
    <string name="basil">Basil</string>
    <string name="sage">Sage</string>
    <string name="peacock">Peacock</string>
    <string name="blueberry">Blueberry</string>
    <string name="lavender">Lavender</string>
    <string name="grape">Grape</string>
    <string name="flamingo">Flamingo</string>
    <string name="graphite">Graphite</string>
    <string name="default_color">Default color</string>
    
    
    
    <!-- shared preferences -->
    <string name="shared_preferences_name">User Info</string>
    <string name="shared_doing_goals">Doing Goals</string>
    <string name="shared_done_goals">Done Goals</string>


    <!-- shared preferences -->
    <string name="subfab_goal_add_goal">Add Goal</string>
    <string name="subfab_goal_add_moneygoal">Add MoneyGoal</string>

</resources>
