<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dsc_archive"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:weightSum="14">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/ic_done" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/goal_dialog_archive"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="11"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dsc_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="14">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/ic_edit"
                    android:backgroundTint="@color/colorPrimaryDark"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/goal_dialog_edit"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="11"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dsc_delete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="14">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/ic_rubbish_bin_delete_button" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/goal_dialog_delete"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="11"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dsc_settings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="14">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/ic_settings"
                    android:backgroundTint="@color/colorPrimaryDark"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/goal_dialog_settings"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="11"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dsc_share"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:weightSum="14">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                >
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="13dp"
                    android:background="@drawable/ic_share"
                    android:backgroundTint="@color/colorMagenta"/>
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/goal_dialog_share"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="11"
                />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
