<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:layout_marginEnd="@dimen/action_bar_height"
    android:background="@color/colorPrimaryDark"
    android:forceHasOverlappingRendering="true"
    android:orientation="vertical"
    android:tag="menu">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/tvMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWrite"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llAccountIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/circle" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvMenuTitleAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="77dp"
            android:layout_marginEnd="10dp"
            android:gravity="center|start"
            android:maxLines="1"
            android:text="@string/account_name"
            android:textColor="@color/colorAccent"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/llAccountIcon" />

        <ImageView
            android:id="@+id/ivMainIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_v7logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llMenuSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_height"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/icon_width"
                        android:layout_height="@dimen/icon_width"
                        android:layout_marginStart="@dimen/space_20dp"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/colorMagenta" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_10dp"
                        android:layout_weight="1"
                        android:text="@string/menu_schedule"
                        android:textColor="@color/colorMagenta"
                        android:textSize="@dimen/text_size_18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMenuGoMoney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_item_second_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/icon_width"
                            android:layout_height="@dimen/icon_width"
                            android:layout_marginStart="@dimen/space_20dp"
                            android:src="@drawable/ic_dollar" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/space_10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_money"
                            android:textColor="@color/colorLime"
                            android:textSize="@dimen/text_size_18sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMenuGoGoal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_item_second_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/icon_width"
                            android:layout_height="@dimen/icon_width"
                            android:layout_marginStart="@dimen/space_20dp"
                            android:src="@drawable/ic_flag"
                            android:tint="@color/colorSoftYellow" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/space_10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_goal_tracker"
                            android:textColor="@color/colorSoftYellow"
                            android:textSize="@dimen/text_size_18sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llMenuGoSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_item_second_height"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/icon_width"
                            android:layout_height="@dimen/icon_width"
                            android:layout_marginStart="@dimen/space_20dp"
                            android:src="@drawable/ic_settings"
                            android:tint="@color/colorICGrey" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/space_10dp"
                            android:layout_weight="1"
                            android:text="@string/menu_settings"
                            android:textColor="@color/colorICGrey"
                            android:textSize="@dimen/text_size_18sp" />

                    </LinearLayout>

                </LinearLayout>
                <!--
                <LinearLayout
                    android:id="@+id/llMenuNoCategory"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_second_height"
                    android:layout_marginTop="-9dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_30dp"
                        android:src="@mipmap/ic_menu_category"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_16dp"
                        android:layout_weight="1"
                        android:text="@string/menu_no_category"
                        android:textColor="@color/menu_item_text_color"
                        android:textSize="@dimen/text_size_16sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/space_10dp"
                        android:src="@mipmap/ic_menu_item_go"/>

                </LinearLayout>
                -->
                <!--
                <com.jeek.calendar.widget.AbsoluteRecyclerView
                    android:id="@+id/rvMenuEventSetList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvMenuAddEventSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableLeft="@drawable/btn_add_event_set"
                    android:drawablePadding="@dimen/space_16dp"
                    android:paddingBottom="@dimen/space_16dp"
                    android:paddingLeft="@dimen/space_30dp"
                    android:paddingTop="@dimen/space_16dp"
                    android:text="@string/menu_add_event_set"
                    android:textColor="@color/menu_item_text_color"/>
                -->
                <TextView
                    android:id="@+id/tvMenuSignOut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:clickable="true"
                    android:drawablePadding="@dimen/space_16dp"
                    android:focusable="true"
                    android:paddingStart="@dimen/space_30dp"
                    android:paddingTop="@dimen/space_16dp"
                    android:paddingBottom="@dimen/space_16dp"
                    android:text="@string/menu_sign_out"
                    android:textColor="@color/menu_item_text_color" />

                <TextView
                    android:id="@+id/tvMenuDeleteAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:background="@color/colorPrimaryDark"
                    android:clickable="true"
                    android:drawablePadding="@dimen/space_16dp"
                    android:focusable="true"
                    android:paddingStart="@dimen/space_30dp"
                    android:paddingTop="@dimen/space_16dp"
                    android:paddingBottom="@dimen/space_16dp"
                    android:text="@string/menu_delete_account"
                    android:textColor="@color/menu_item_text_color" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>